fixed some spacing

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -83,6 +83,8 @@ hr
 .module
   padding-top: 40px
   padding-bottom: 40px
+  &.last
+    padding-bottom: 0
 
 .btn
   margin-top: 20px
